--- a/torcs/torcs/README
+++ b/torcs/torcs/README
@@ -302,7 +302,8 @@ TODO for 1.3.0 (estimate: goal 12.2005, real 2.2006)
   found <RADI>", where bla in "DM_FRICTION, PRED_ACCEL, PRED_STEER, END".
   The file has been written and is in place, gets as well opened fine.
   E.g. for e-track-6 the file is 20 bytes larger than the one which is created
-  on Linux... Arghhh.
+  on Linux... Arghhh. Hypotesis: fopen need to be set to binary "rb", "wb" to
+  avoid translation of some chars.
 - Investigate funny steering bug (?) reported by Eugen.
 - Missing doppler on Windows, investigate.
 - SDL port.
