--- a/torcs/torcs/README
+++ b/torcs/torcs/README
@@ -100,8 +100,8 @@ Bernhard.
 Changes since 1.2.4-test3
 -------------------------
 - Version number 1.2.4 (Bernhard).
-- Linux installer (Bernhard).
-- Windows installer (Bernhard).
+- Updated Linux installer (Bernhard).
+- Updated Windows installer (Bernhard).
 - Windows patch for test3 (Bernhard).
 
 
