--- a/torcs/torcs/README
+++ b/torcs/torcs/README
@@ -99,11 +99,13 @@ Changes since 1.2.4
 
 TODO for 1.3.0 (estimate: goal 12.2005, real 2.2006)
 --------------
-- Fix sound volume option (ask Christos).
+- Fix sound volume option (ask Christos). [Seems to be OK, check GUI code - Christos]
 - Fix and reenable -s option in Windows (car rendering ignores missing multitex
   extension).
 - fix temporary sound volume jump when changing camera with OpenAL (plib not
-  tested, verify) (ask Christos).
+  tested, verify) (ask Christos). [Seems to be OK]
+- When car is moving sideways, the engine sound source seems shifted to the side also
+  under OpenAL.
 - Olethros data file interpreting fails on Windows, reports "Expected tag <bla>,
   found <RADI>", where bla in "DM_FRICTION, PRED_ACCEL, PRED_STEER, END".
   The file has been written and is in place, gets as well opened fine.
