--- a/torcs/torcs/README
+++ b/torcs/torcs/README
@@ -99,13 +99,13 @@ Changes since 1.2.4
 - Verified OpenAL volume jump, seems to be gone, perhaps caused by source
   scheduler (Christos, Bernhard).
 - Track tutorial added to CVS (Christos).
+- Fixed -s option in Windows and usage of Multitexturing if extension is not
+  available (Bernhard).
 
 
 TODO for 1.3.0 (estimate: goal 12.2005, real 2.2006)
 --------------
 - Fix sound volume option (ask Christos). [Seems to be OK, check GUI code - Christos]
-- Fix and reenable -s option in Windows (car rendering ignores missing multitex
-  extension).
 - When car is moving sideways, the engine sound source seems shifted to the side also
   under OpenAL.
 - Missing doppler on Windows, investigate.
