--- a/torcs/torcs/README
+++ b/torcs/torcs/README
@@ -103,7 +103,7 @@ Changes since 1.2.4
 - Verified OpenAL volume jump, seems to be gone, perhaps caused by source
   scheduler (Christos, Bernhard).
 - Track tutorial added to CVS (Christos).
-- Fixed -s option in Windows and usage of Multitexturing if extension is not
+- Fixed -s option in Windows and usage of multitexturing if extension is not
   available (Bernhard).
 - Fixed wrong car corners for cars with noncentral center of gravity (Bernhard).
 - Added support for multiple cars per pit. The cars must be of the same team,
@@ -111,16 +111,30 @@ Changes since 1.2.4
   with <attnum name="cars per pit" val="2"/>. Values from 1-4 are accepted. Be
   aware that the robots are not adopted, this is just for TRB use for now
   (Bernhard).
+- Fixed segfault in new pit code (Mart Kelder, Bernhard).
+- Updated 360-Modena model and textures for player, berniw, inferno and damned
+  (Bernhard).
+- Added fixed cameras to alpine-1 (Christos).
+- Improved field of view ratio handling (Felix Kühling, Christos).
+- Fixed floating F10 camera (Christos).
+- Updated bt with changes from bt_2004 (Bernhard).
 
 
 
-TODO for 1.3.0 (estimate: goal 12.2005, real 2.2006)
+
+TODO for 1.3.0 (5.2006)
 --------------
 - Fix sound volume option (ask Christos). [Seems OK, check GUI code - Christos]
 - When car is moving sideways, the engine sound source seems shifted to the
   side under OpenAL.
 - SDL port.
 - Check for memory leaks.
+- (get/write raceengine.xml to users local dir.)
+- screenshots to local dir.
+- Bugs from bugtracker.
+
+Optional for 1.3.0:
+-------------------
 - Add valgrind option to "torcs".
 - Include suppressions file for valgrind.
 - (Fix parallel build with make -j n, breaks currently in SOLID) (Bernhard).
@@ -137,9 +151,7 @@ TODO for 1.3.0 (estimate: goal 12.2005, real 2.2006)
 - Integrate documentation into CVS/distribution.
 - merge berniw_2004 code into berniw's (rescheduled, a bit more testing will
   not hurt).
-- merge bt_2004 into bt.
 - review/comment simuv2 (e.g. rollres, fuel, collision, more).
-- possibility of one pit for 2 cars of one module.
 - fix tools (accc, trackgen, etc, these are way too touchy).
 - make trackgen generate two sides for barriers and use just one sided
   polygons (better diffuse lighting).
@@ -166,6 +178,7 @@ TODO for 1.3.0 (estimate: goal 12.2005, real 2.2006)
 - check all textures for the user selectable cars, they should be nicer.
 
 - (get/write raceengine.xml to users local dir.)
+- screenshots to local dir.
 - (Problem when driver list changes during championship.)
 - (add proper init/shutdown to every module which is not bound to anything else
   but the loading/init/shutdown/unloading process.)
@@ -174,12 +187,15 @@ TODO for 1.3.0 (estimate: goal 12.2005, real 2.2006)
   "mencoder -ovc lavc -lavcopts vcodec=mpeg4:vhq:vbitrate=1800 \*.jpg -mf on:type=jpeg:fps=25"
   the backslash got swallowed by the CMS.
 
+
+
 TODO for 1.9.x (pre 2.0 series, no release)
 --------------
 - Design networking, how to embed it into TORCS?
 - Networking prototype.
 - Gaming modes suitable for online races.
 - Cockpit inside view.
+- Set up infrastructure for reading binary data files bit with and endianness independent.
 
 TODO for 2.0.0
 --------------
