--- a/torcs/torcs/README
+++ b/torcs/torcs/README
@@ -127,6 +127,8 @@ Changes since 1.2.4
 - Fixed a bug which prevented the display off all avilable resolutions which
   xrandr advertises (Bernhard).
 - Applied suggested gcc 4.1 compile fix (Mart Kelder, Bernhard).
+- Fixed wrong flags (-kk) in ssggraph (Bernhard).
+
 
 
 
