--- a/torcs/torcs/README
+++ b/torcs/torcs/README
@@ -129,6 +129,7 @@ Changes since 1.2.4
 - Applied suggested gcc 4.1 compile fix (Mart Kelder, Bernhard).
 - Fixed wrong flags (-kk) in ssggraph (Bernhard).
 - Some corrections in the robot tutorial (Wino, Bernhard).
+- Added track wheel-2 created by Andrew Sumner (Andrew, Bernhard).
 
 
 
