--- a/torcs/torcs/README
+++ b/torcs/torcs/README
@@ -131,6 +131,9 @@ Changes since 1.2.4
 - Some corrections in the robot tutorial (Wino, Bernhard).
 - Added track wheel-2 created by Andrew Sumner (Andrew, Bernhard).
 - Added track street-1 created by Andrew Sumner (Andrew, Bernhard).
+- Replaced track dirt-3 with new track created by Andrew Sumner
+  (Andrew, Bernhard).
+- Removed some outdated files (CHANGELOG.html, TODO.html) (Bernhard).
 
 
 
