--- a/torcs/torcs/README
+++ b/torcs/torcs/README
@@ -134,25 +134,28 @@ Changes since 1.2.4
 - Replaced track dirt-3 with new track created by Andrew Sumner
   (Andrew, Bernhard).
 - Removed some outdated files (CHANGELOG.html, TODO.html) (Bernhard).
+- Added new track Ruudskogen created by Tor Arne Hustvedt, ported
+  to TORCS by Andrew Sumner (Andrew, Bernhard).
+- Fixed minor visual issues of the lotus-gt1 (Bernhard).
+- Reworked viper (Andrew).
+- Once again totally reworked viper (Bernhard).
 
 
-
-
-
-TODO for 1.3.0 (5.2006, test1)
---------------
-- Rework/Integrate Andrews Viper.
-
-TODO for 1.3.0 (6.2006, test2)
---------------
-- Fix sound volume option (ask Christos). [Seems OK, check GUI code - Christos]
+TODO for 1.3.0 test 1
+---------------------
+- Fix sound volume option (ask Christos). [Seems OK, check GUI code - Christos] (2.0)
 - When car is moving sideways, the engine sound source seems shifted to the
-  side under OpenAL.
-- SDL port.
+  side under OpenAL (2.0).
+- SDL port (->2.0).
 - Check for memory leaks.
 - (get/write raceengine.xml to users local dir.)
 - screenshots to local dir.
 - Bugs from bugtracker.
+
+
+
+
+
 
 Optional for 1.3.0:
 -------------------
