--- a/torcs/torcs/README
+++ b/torcs/torcs/README
@@ -150,7 +150,12 @@ Changes since 1.2.4
   Bernhard).
 - Fixed wrong key-state after pitmenu, excellent report by Mart Kelder,
   needs more testing (Bernhard).
-
+- Adjustments on car data files and models (360-modena, viper, lotus)
+  (Bernhard).
+- New car (car1-trb1), prototype/experiment for "unified" cars (unified: usable
+  as direct opponents) (Bernhard).
+- Improved possible packers thickness of category Track-RWD-GrA to 50mm
+  (Bernhard).
 
 
 TODO for 1.3.0 test 1
