- Updated TODO/done.

--- a/torcs/torcs/README
+++ b/torcs/torcs/README
@@ -159,6 +159,7 @@ Changes since 1.2.4
 - Added -fno-strict-aliasing for now to avoid warnings with newer versions off
   gcc which enables strict-aliasing by default (Bernhard).
 - Fixed compile warnings in img.cpp (Bernhard).
+- Updated bat files to deploy michigan, ruudskogen and car1-trb1 (Bernhard).
 
 
 TODO for 1.3.0 test 1
