--- a/torcs/torcs/README
+++ b/torcs/torcs/README
@@ -163,6 +163,8 @@ Changes since 1.2.4
 - Updated installer (Bernhard).
 - Fixed ancient and obscure menu crash bug (not executed "Quit" releases handle
   of main menu "Quit") (Bernhard).
+- Fixed ole-road-1 beginning/end matching (Bernhard).
+- Screenshots go now to local dir (.torcs/screenshots) (Bernhard).
 
 
 TODO for 1.3.0 test 1
@@ -173,7 +175,6 @@ TODO for 1.3.0 test 2
 ---------------------
 - Check for memory leaks.
 - (get/write raceengine.xml to users local dir.)
-- screenshots to local dir.
 - Bugs from bugtracker.
 
 
