--- a/torcs/torcs/README
+++ b/torcs/torcs/README
@@ -165,6 +165,7 @@ Changes since 1.2.4
   of main menu "Quit") (Bernhard).
 - Fixed ole-road-1 beginning/end matching (Bernhard).
 - Screenshots go now to local dir (.torcs/screenshots) (Bernhard).
+- Get/write raceengine.xml to users local dir (Bernhard).
 
 
 TODO for 1.3.0 test 1
@@ -173,8 +174,8 @@ TODO for 1.3.0 test 1
 
 TODO for 1.3.0 test 2
 ---------------------
+- undecided;-)
 - Check for memory leaks.
-- (get/write raceengine.xml to users local dir.)
 - Bugs from bugtracker.
 
 
