--- a/torcs/torcs/README
+++ b/torcs/torcs/README
@@ -93,6 +93,10 @@ Changes since 1.3.0 test 1
 --------------------------
 - Fixed bt pit bug reported by Mart Kelder (Mark Kelder, Bernhard).
 - Fixed missing car category reported by Mart Kelder (Mart Kelder, Bernhard).
+- Fixed various gcc warnings (Mart Kelder, Bernhard).
+- Support newer version of OpenAL where ALUT and OpenAL are two distinct
+  libraries (Bernhard).
+- Version number to 1.3.0 (Bernhard)
 
 
 Changes since 1.2.4
@@ -174,16 +178,11 @@ Changes since 1.2.4
 - Get/write raceengine.xml to users local dir (Bernhard).
 
 
-TODO for 1.3.0 test 1
----------------------
-
-
-TODO for 1.3.0 test 2
----------------------
-- undecided;-)
-- Check for memory leaks.
-- Bugs from bugtracker.
-
+TODO for 1.4.0
+--------------
+- Apply SDL patch from Brian Gavin (rescheduled to 1.4.0 to get to to test
+  seriously).
+- Update OpenAL to 1.1, fix use of deprecated stuff.
 
 
 
@@ -204,8 +203,6 @@ Later:
 - Texture clamp to edge needs explicit setting in nvidia driver tab in windows,
   have a look into that (otherwise the border is not taken as color around the
   pit door, pits are quite dark around the logo).
-- check and merge Christos camera code if useful.
-- Integrate documentation into CVS/distribution.
 - merge berniw_2004 code into berniw's (rescheduled, a bit more testing will
   not hurt).
 - review/comment simuv2 (e.g. rollres, fuel, collision, more).
@@ -213,29 +210,16 @@ Later:
 - make trackgen generate two sides for barriers and use just one sided
   polygons (better diffuse lighting).
 - fix sound in split screen multiplayer. [in progress] (ask Christos).
-- Investigate non reproducable (so far) crash after changing properties in
-  multiple players (human) and then doing a race with 2 players. Happend just
-  after a fresh install and just once so far (is one of the shipped xml files
-  broken)? [note there are many other crashes when using the menus, seemingly
-  at random times].
 - Add remaining kcendra cars.
-- Check and add Andrews tracks.
 - Check and add Andrews car improvements.
 - Check and add Erics new car class.
 - Ongoing: Replace some defines with "static const" to be able to see the
   symbol name when debugging.
-- berniw/bt/sparkle: make use of classes in lib/math.
-- Investigate/fix crash on rainbowroad (happens as well with 1.2.3). RtTrackGlobal2Local
-  seems to deliver nonsense, could be caused by trackloader through unusual turn
-  angles (e.g. > 180deg). Check if this problem just occurs on version 3 tracks.
 - add more races to championship.
 - move berniw/bt spline code into math to share it.
 - hunt down all glGet* crap during the simulation.
-- verify gear switching flames for car, e.g for the 360.
 - check all textures for the user selectable cars, they should be nicer.
 
-- (get/write raceengine.xml to users local dir.)
-- screenshots to local dir.
 - (Problem when driver list changes during championship.)
 - (add proper init/shutdown to every module which is not bound to anything else
   but the loading/init/shutdown/unloading process.)
