--- a/torcs/torcs/README
+++ b/torcs/torcs/README
@@ -96,6 +96,7 @@ Changes since 1.3.0 test 1
 - Fixed various gcc warnings (Mart Kelder, Bernhard).
 - Support newer version of OpenAL where ALUT and OpenAL are two distinct
   libraries (Bernhard).
+- Add X11 libraries in configure.in to LDFLAGS in a later stage (Bernhard).
 - Version number to 1.3.0 (Bernhard)
 
 
