--- a/torcs/torcs/README
+++ b/torcs/torcs/README
@@ -93,12 +93,13 @@ Changes since 1.3.0
 -------------------
 - Applied patch for screen resolution change program crash when the path
   contained spaces (Brian Gavin, Bernhard).
-
+- Added new car, car2-trb1 (Bernhard).
 
 
 
 TODO for 1.4.0
 --------------
+- Car class for TRB.
 - Apply SDL patch from Brian Gavin (rescheduled to 1.4.0 to get to to test
   seriously).
 - Update OpenAL to 1.1, fix use of deprecated stuff.
@@ -109,7 +110,6 @@ Later:
 -------------------
 - When car is moving sideways, the engine sound source seems shifted to the
   side under OpenAL (2.0).
-- SDL port (->2.0).
 - Add valgrind option to "torcs".
 - Include suppressions file for valgrind.
 - (Fix parallel build with make -j n, breaks currently in SOLID) (Bernhard).
