--- a/torcs/torcs/README
+++ b/torcs/torcs/README
@@ -95,6 +95,7 @@ Changes since 1.3.0
   contained spaces (Brian Gavin, Bernhard).
 - Added new car, car2-trb1 (Bernhard).
 - Added new car, car3-trb1 (Bernhard).
+- TRB: allow signing in during season, mail tool for admin (Bernhard).
 
 
 TODO for 1.4.0
