- Updated TODO/done.

--- a/torcs/torcs/README
+++ b/torcs/torcs/README
@@ -96,6 +96,7 @@ Changes since 1.3.0
 - Added new car, car2-trb1 (Bernhard).
 - Added new car, car3-trb1 (Bernhard).
 - TRB: allow signing in during season, mail tool for admin (Bernhard).
+- Added new car, car5-trb1 (Bernhard).
 
 
 TODO for 1.4.0
