--- a/torcs/torcs/README
+++ b/torcs/torcs/README
@@ -97,6 +97,8 @@ Changes since 1.3.0
 - Added new car, car3-trb1 (Bernhard).
 - TRB: allow signing in during season, mail tool for admin (Bernhard).
 - Added new car, car5-trb1 (Bernhard).
+- Added new car, car4-trb1 (Bernhard).
+
 
 
 TODO for 1.4.0
