--- a/torcs/torcs/README
+++ b/torcs/torcs/README
@@ -106,6 +106,9 @@ Changes since 1.3.0
   car stuck" problems (Bernhard).
 - Fixed XML parsing problem with entities (#1651190, reported by Carsten
   Milkau) (Bernhard) 
+- Code adjustments for VC 2005 (Eric).
+- Added car6-trb1 created by Wolf-Dieter Beelitz and reworked by Bernhard
+  (Wolf-Dieter Beelitz, Bernhard).
 
 
 TODO for 1.4.0
